--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,10 @@ tracing-bunyan-formatter = "0.3"
 tracing-log = "0.1"
 secrecy = { version = "0.8", features = ["serde"] }
 tracing-actix-web = "0.7"
+serde-aux = "4"
 
 [dependencies.sqlx]
-version = "0.7"
+version = "0.8"
 default-features = false
 features = [
     "runtime-tokio-rustls",
@@ -41,3 +42,7 @@ features = [
 [dev-dependencies]
 reqwest = "0.11"
 once_cell = "1"
+
+
+[profile.release]
+strip = true
